style.css
body {
	font-size: 100%;
}

.clip-svg {
	clip-path: url(#logoclip);
}

.split {
	height: 100%;
	width: 50%;
	position: absolute;
	z-index: 1;
	top: 0;
	overflow-x: hidden;
	padding-top: 40px;
}

.left {
	left: 0;
	background-color: #eee;
}

.right {
	right: 0;
	background-color: white;
}

.content {
	position: relative;
	width: 40vw;
	height: 50vw;
	/*background-color: yellow;*/
	margin: auto;
	/*top: 50%;*/
}

nav {
	width: 100%;
	margin-top: 80px;
	/*background-color: pink;*/
}

nav ul {
	overflow: hidden;
	margin: 0;
	padding: 0;
}

nav ul li {
	list-style-type: none;
	font-family: Helvetica, sans serif;
	font-weight: bold;
	font-size: 6em;
	text-align: left;
	line-height: 115px;
}

nav ul li:hover {
	background-color: yellow;
}

h2 {
	font-family: Helvetica, sans serif;
	font-size: 3em;
	font-weight: lighter;
	margin-top: 15px;
	/*color: navy;*/
}

/*.fa-arrow-left {
	width: 100px;
	background-color: yellow;
}
*/
/*.circle {
  height: 200px;
  width: 200px;
  background-color: #555;
  border-radius: 50%;
  margin: auto;
}*/

.clip {
  clip-path: circle(160px at center);
}

.social {
	/*background-color: yellow;*/
	text-align: center;
	margin: auto;
	/*width: auto;*/
}

.fa-github, 
.fa-linkedin-in, 
.fa-codepen {
	margin: 10px;
}

.fa-github:hover, 
.fa-linkedin-in:hover, 
.fa-codepen:hover {
	margin: 10px;
	color: yellow;
}

img {
	width: 350px;
}

@media screen and (max-width : 760px) {

}

